--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    caret-color: #ffffff;
 }
 
 section {
@@ -42,12 +43,14 @@ h2{
     font-size: 2em;
     color: #fff;
     text-align: center;
+    padding-top: 24px;
 }
 
 .input-box{
     position: relative;
     width: 310px;
     margin: 30px 0;
+    bottom: 15px;
     border-bottom: 2px solid #fff;
 }
 
@@ -65,7 +68,11 @@ h2{
 
 .input-box input:focus~label,
 .input-box input:valid~label{
+    background: #00dfc4;
     top: -5px;
+    margin-top: 7px;
+    padding: 0 5px;
+    border-radius: 2px;
 }
 .input-box input{
     width: 100%;
@@ -87,6 +94,7 @@ h2{
 }
 
 legend {
+    top: 30px;
     font-size: 2em;
     color: #fff;
     text-align: center;
@@ -96,6 +104,7 @@ legend {
 fieldset {
     border: none;
 }
+
 button {
     width: 100%;
     height: 40px;
@@ -117,13 +126,11 @@ button {
 
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-input:-webkit-autofill:active {
-  -webkit-box-shadow: 0 0 0 30px transparent inset !important; /* Substitua #1e1e1e pela cor de fundo desejada */
-  -webkit-text-fill-color: #ffffff !important; /* Substitua #ffffff pela cor do texto desejada */
-  transition: background-color 5000s ease-in-out 0s;
-}
-
+input:-webkit-autofill:focus {
+    -webkit-box-shadow: none;
+    -webkit-text-fill-color: #ffffff;
+    transition: background-color 5000s ease-in-out 0s;
+  }
 
 @media (max-width: 360px){
     .register-box{
@@ -135,4 +142,34 @@ input:-webkit-autofill:active {
     .input-box{
         width:290px;
     }
+}
+
+/*Placeholder appear on focus*/
+
+input::placeholder {
+    color: transparent; 
+    transition: color 0.3s ease;
+}
+
+input:focus::placeholder {
+    color: #999; 
+}
+
+#toggle {
+    cursor: pointer;
+    transition: color 0.3s;
+}
+
+/*Button styles*/
+
+button[type="submit"]
+{
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    transition: 0.5s;
+}
+
+button[type="submit"]:hover
+{
+    letter-spacing: 0.35em;
 }
