--- a/style.css
+++ b/style.css
@@ -12,8 +12,7 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    width: 100%;
+    min-height: 100vh;
     background: url('./images/cool-background.jpg') no-repeat;
     background-size: cover;
     background-position: center;
@@ -29,28 +28,45 @@ section {
 .register-box {
     position: relative;
     width:400px;
-    height: 450px;
+    height: 475px;
     background: transparent;
     border: 2px solid rgba(255,255,255,.5);
     border-radius: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
-    backdrop-filter: blur(15px);
+    backdrop-filter: blur(15px);;
 }
 
-h2{
+h2 {
     font-size: 2em;
     color: #fff;
     text-align: center;
-    padding-top: 24px;
 }
+
+/* header {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .logo {
+    color: white;
+    font-size: 2rem;
+    font-weight: bold;
+  }
+  
+  .logo span {
+    color: #69dbd0;
+    text-shadow: 0 0 10px #69dbd0;
+  } */
 
 .input-box{
     position: relative;
     width: 310px;
-    margin: 30px 0;
-    bottom: 15px;
+    margin: 20px 0;
     border-bottom: 2px solid #fff;
 }
 
@@ -64,7 +80,6 @@ h2{
     pointer-events: none;
     transition: .5s;
 }
-
 
 .input-box input:focus~label,
 .input-box input:valid~label{
@@ -82,7 +97,7 @@ h2{
     outline: none;
     font-size: 1em;
     color: #fff;
-    padding: 0 35px 0 5px;
+    padding: 0 35px 0 px;
 }
 
 .input-box .icon{
@@ -93,21 +108,16 @@ h2{
     line-height: 57px;
 }
 
-legend {
+h2 {
     top: 30px;
     font-size: 2em;
     color: #fff;
     text-align: center;
     font-weight: 300;
 }
-
-fieldset {
-    border: none;
-}
-
 button {
     width: 100%;
-    height: 40px;
+    height: 30px;
     background: #fff;
     border: none;
     outline: none;
@@ -116,6 +126,7 @@ button {
     font-size: 1em;
     color: #000;
     font-weight: 500;
+    padding-bottom: 7px;
 }
 
 .input-number::-webkit-inner-spin-button,
