--- a/style.css
+++ b/style.css
@@ -35,13 +35,7 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
-    backdrop-filter: blur(15px);;
-}
-
-h2 {
-    font-size: 2em;
-    color: #fff;
-    text-align: center;
+    backdrop-filter: blur(15px);
 }
 
 .input-box{
@@ -70,6 +64,7 @@ h2 {
     padding: 0 5px;
     border-radius: 2px;
 }
+
 .input-box input{
     width: 100%;
     height: 50px;
@@ -78,7 +73,7 @@ h2 {
     outline: none;
     font-size: 1em;
     color: #fff;
-    padding: 0 35px 0 px;
+    padding: 0 35px 0px;
 }
 
 .input-box .icon{
@@ -96,6 +91,7 @@ h2 {
     text-align: center;
     font-weight: 300;
 }
+
 button {
     width: 100%;
     height: 30px;
@@ -136,12 +132,14 @@ input:-webkit-autofill:focus {
     }
 }
 
-/*Placeholder appear on focus*/
+/*Placeholder disappear*/
 
 input::placeholder {
     color: transparent; 
     transition: color 0.3s ease;
 }
+
+/*Placeholder appear on focus*/
 
 input:focus::placeholder {
     color: #999; 
